--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ h1 {
 /*Body*/
 
 .body {
-  padding:  5vw;
+  padding: 5vw 5vw 10vw 5vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
